--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1>Hello Coursera !! My journey of web development start here.</h1> 
+<h2>Browser Sync in server mode connected : as local http server</h2>
 </body>
 </html>
